--- a/client/src/app/shop/product-item/product-item.component.html
+++ b/client/src/app/shop/product-item/product-item.component.html
@@ -7,7 +7,7 @@
         <span class="mb-2">{{product.price | currency}}</span>
         <div class="btn-group w-100 mt-auto">
             <button type="button" class="btn btn-outline-secondary fa fa-shopping-cart mr-2 w-50"></button>
-            <button type="button" class="btn btn-outline-secondary w-50">View</button>
+            <button type="button" routerLink = "/shop/{{product.id}}" class="btn btn-outline-secondary w-50">View</button>
         </div>
     </div>
 </div>
