--- a/client/src/app/core/nav-bar/nav-bar.component.scss
+++ b/client/src/app/core/nav-bar/nav-bar.component.scss
@@ -13,10 +13,11 @@
 
 a{
     text-decoration: none; 
+    font-weight: bold;
     color: #343a40;
 
     &.active{
-        color: orange;
+        color: orange;        
     }
 }
 
