--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,49 +1,44 @@
-<div class="container">
+<div class="container mt-3">
     <div class="row">
 
         <section class="col-3">
+            <ng-container *ngIf="loadCompleted">
+                <h5 class="text-warning ml-3 mt-4 mb-3"> Sort</h5>
+                <select class="custom-select mb-4" (change)="onSortSelected($event.target)">
+                    <option *ngFor="let item of sortOptions" [value]="item.value">
+                        {{item.name}}
+                    </option>
+                </select>
 
-            <h5 class="text-warning ml-3"> Sort</h5>
-            <select class="custom-select mb-3"
-                (change) = "onSortSelected($event.target)">
-                <option *ngFor="let item of sortOptions" [value] = "item.value" > 
-                    {{item.name}}
-                </option>
-            </select>
+                <h5 class="text-warning ml-3"> Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" *ngFor="let brand of brands"
+                        [class.active]="brand.id === shopParams.brandId" [value]="brand.id"
+                        (click)="onBrandSelected(brand.id)">
+                        {{brand.name}}
+                    </li>
+                </ul>
 
-            <h5 class="text-warning ml-3"> Brands</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" *ngFor="let brand of brands"
-                [class.active] ="brand.id === shopParams.brandId"
-                [value] = "brand.id"
-                (click) = "onBrandSelected(brand.id)">
-                    {{brand.name}}
-                </li>
-            </ul>
-
-            <h5 class="text-warning ml-3"> Types</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" *ngFor="let type of types"
-                [class.active] ="type.id === shopParams.typeId"
-                [value] = "type.id"
-                (click) = "onTypeSelected(type.id)">
-                    {{type.name}}
-                </li>
-            </ul>
-
+                <h5 class="text-warning ml-3"> Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" *ngFor="let type of types"
+                        [class.active]="type.id === shopParams.typeId" [value]="type.id"
+                        (click)="onTypeSelected(type.id)">
+                        {{type.name}}
+                    </li>
+                </ul>
+            </ng-container>
         </section>
 
         <section class="col-9">
-            <div class="d-flex justify-content-between align-items-center pb-2">
+            <div class="d-flex justify-content-between align-items-center pb-2" *ngIf="loadCompleted">
 
-                <app-paging-header
-                [totalCount] = "totalCount"
-                [pageSize] = "shopParams.pageSize"
-                [pageNumber] = "shopParams.pageNumber"
-                ></app-paging-header>
+                <app-paging-header [totalCount]="totalCount" [pageSize]="shopParams.pageSize"
+                    [pageNumber]="shopParams.pageNumber"></app-paging-header>
 
-                <div class="form-inline mt-2">
-                    <input type="text" placeholder="Search" style="width: 300px;" class="form-control mr-2" #search (keyup.enter)="onSearch()">
+                <div class="form-inline" >
+                    <input type="text" placeholder="Search" style="width: 300px;" class="form-control mr-2" #search
+                        (keyup.enter)="onSearch()">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success my-2 ml-2">Reset</button>
                 </div>
@@ -52,17 +47,14 @@
 
             <div class="row">
                 <div class="col-4 mb-4" *ngFor="let item of products">
-                    <app-product-item [product] = "item"></app-product-item>
+                    <app-product-item [product]="item"></app-product-item>
                 </div>
             </div>
 
-           <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-               <app-pager
-               [totalCount] = "totalCount"
-               [pageSize] = "shopParams.pageSize"
-               (pagerChange) = "onPageChanged($event)"
-               ></app-pager>
-           </div>
+            <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
+                <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize"
+                    (pagerChange)="onPageChanged($event)"></app-pager>
+            </div>
         </section>
     </div>
 </div>
