--- a/client/src/app/shared/components/basket-summary/basket-summary.component.html
+++ b/client/src/app/shared/components/basket-summary/basket-summary.component.html
@@ -1,27 +1,27 @@
-<ng-container *ngIf="(basket$ | async) as basket">
+<ng-container>
     <div class="table-responsive">
         <table class="table">
             <thead>
-                <tr>
-                    <th class="border-0" scope="col" [class.bg-light]="isBasket">
-                        <div class="p-2 px3 text-uppercase">Product</div>
+                <tr [class.thead-light]="isBasket || isOrder" class="border-0" style="padding: 1.20em;">
+                    <th scope="col" >
+                        <div class="px-2 text-uppercase">Product</div>
                     </th>
-                    <th class="border-0" scope="col" [class.bg-light]="isBasket">
-                        <div class="p-2 px3 text-uppercase">Price</div>
+                    <th scope="col" >
+                        <div class="px-2 text-uppercase">Price</div>
                     </th>
-                    <th class="border-0" scope="col" [class.bg-light]="isBasket">
-                        <div class="p-2 px3 text-uppercase">Quantity</div>
+                    <th scope="col" >
+                        <div class="px-2 text-uppercase">Quantity</div>
                     </th>
-                    <th class="border-0" scope="col" [class.bg-light]="isBasket">
-                        <div class="p-2 px3 text-uppercase">Total</div>
+                    <th scope="col">
+                        <div class="px-2 text-uppercase">Total</div>
                     </th>
-                    <th *ngIf="isBasket" class="border-0 bg-light" scope="col">
-                        <div class="p-2 px3 text-uppercase">Remove</div>
+                    <th scope="col" *ngIf="isBasket">
+                        <div class="px-2 text-uppercase">Remove</div>
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let item of basket?.items">
+                <tr *ngFor="let item of items" class="border-0">
                     <th scope="row">
                         <div class="p-2">
                             <img src="{{item.pictureUrl}}" alt="{{item.productName}}"
@@ -32,7 +32,7 @@
                                         {{item.productName}}
                                     </a>
                                 </h5>
-                                <span class="text-muted font-weight-normal font-italic d-block">
+                                <span *ngIf="item.type.length > 0" class="text-muted font-weight-normal font-italic d-block">
                                     Type: {{item.type}}
                                 </span>
                             </div>
