--- a/client/src/app/basket/basket.component.html
+++ b/client/src/app/basket/basket.component.html
@@ -1,9 +1,9 @@
 <div class="container mt-2">
-    <div *ngIf="(basket$ | async) === null">
+    <div *ngIf="!(basket$ | async) || (basket$ | async)?.items?.length == 0">
         <p>There are no items in your basket</p>
     </div>
     <div *ngIf="(basket$ | async) as basket">
-        <div class="pb-5">
+        <div class="pb-5" *ngIf="basket.items.length > 0">
             <div class="container">
                 <div class="row">
                     <div class="col-12 py-5 mb-1">
