--- a/client/src/app/core/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/components/nav-bar/nav-bar.component.html
@@ -9,8 +9,10 @@
     <div class="d-flex align-items-center">
         <a routerLink="/basket" class="position-relative">
             <i class="fa fa-shopping-cart fa-2x mr-5 text-dark"></i>
-            <div *ngIf="(basket$ | async) as basket" class="cart-no">
-                {{basket.items.length}}</div>
+            <div *ngIf="(basket$ | async) as basket">
+                <div *ngIf="basket.items.length > 0" class="cart-no">
+                    {{basket.items.length}}</div>
+            </div>
         </a>
         <ng-container *ngIf="(currentUser$ | async) == null">
             <a routerLink="/account/login" class="btn btn-outline-secondary mr-2">Login</a>
