--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -5,7 +5,9 @@
             <ng-container *ngIf="loadCompleted">
                 <h5 class="text-warning ml-3 mt-4 mb-3"> Sort</h5>
                 <select class="custom-select mb-4" (change)="onSortSelected($event.target)">
-                    <option *ngFor="let item of sortOptions" [value]="item.value">
+                    <option *ngFor="let item of sortOptions" 
+                        [selected] = 'shopParams.sort == item.value'
+                        [value]="item.value">
                         {{item.name}}
                     </option>
                 </select>
@@ -37,7 +39,7 @@
                     [pageNumber]="shopParams.pageNumber"></app-paging-header>
 
                 <div class="form-inline" >
-                    <input type="text" placeholder="Search" style="width: 300px;" class="form-control mr-2" #search
+                    <input type="text" placeholder="Search" style="width: 300px;" class="form-control mr-2" #search [value]="shopParams.search"
                         (keyup.enter)="onSearch()">
                     <button (click)="onSearch()" class="btn btn-outline-primary my-2">Search</button>
                     <button (click)="onReset()" class="btn btn-outline-success my-2 ml-2">Reset</button>
@@ -52,7 +54,10 @@
             </div>
 
             <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-                <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize"
+                <app-pager 
+                [totalCount]="totalCount" 
+                [pageSize]="shopParams.pageSize"
+                [pageNumber] = "shopParams.pageNumber"
                     (pagerChange)="onPageChanged($event)"></app-pager>
             </div>
         </section>
